welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ';' expected but 'else' found.
		else if (Math.abs(10-b)<Math.abs(10-a)) {
                ^close10:7: error: ';' expected but 'return' found.
	} return 0
          ^